log/build_2025-05-19_21-33-18/lab4_image_receiver/stderr.log
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp: In constructor ‘ArUcoDetector::ArUcoDetector()’:
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:40:26: error: expected ‘)’ before ‘;’ token
   40 |             0.0, 0.0, 1.0;       // 0, 0, 1
      |                          ^
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:37:26: note: to match this ‘(’
   37 |         camera_matrix_ = (cv::Mat_<double>(3, 3) <<
      |                          ^
gmake[2]: *** [CMakeFiles/lab4_image_receiver_node.dir/build.make:76: CMakeFiles/lab4_image_receiver_node.dir/src/lab4_image_receiver_node.cpp.o] Ошибка 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/lab4_image_receiver_node.dir/all] Ошибка 2
gmake: *** [Makefile:146: all] Ошибка 2
